--- a/resources/navigator.html
+++ b/resources/navigator.html
@@ -49,8 +49,8 @@
   </p>
 
   <div id="regPanel"></div>
-  <div>RA:  <input id="RA"  type="range" onchange="posChange()" value="180" min="0" max="360" step="0.25" size="70%" /></div>
-  <div>Dec: <input id="Dec" type="range" onchange="posChange()" value="0" min="-90" max="90" step="0.25" size="70%" /></div>
+  <div>RA:  <input id="RA"  type="range" oninput="posChange()" value="180" min="0" max="360" step="0.25" size="70%" /></div>
+  <div>Dec: <input id="Dec" type="range" oninput="posChange()" value="0" min="-90" max="90" step="0.25" size="70%" /></div>
   <div>Pos: <span id="pos"></span></div>
   <div><img id="nav-samp-img" alt="TLSAMP machinery" /></div>
 </body>
