adjust send click action in send.html
Can't remember why or if this was a good idea.

--- a/resources/send.html
+++ b/resources/send.html
@@ -75,7 +75,9 @@
       while (listNode.firstChild) {
           listNode.removeChild(listNode.firstChild);
       }
-      connector.runWithConnection(send);
+      if (connector.connection) {
+          send(connector.connection);
+      }
   };
 
   onload = function() {
