add complete (but terse) description of protocol
New file protocol.txt contains a complete description of the
protocol for the three actors (web app, tls hub profile, and relay).
It will be updated in step with any changes made to the protocol
as implemented in the code here.

--- a/deploy.html
+++ b/deploy.html
@@ -26,6 +26,10 @@
                                 >tlshub.jar</a></code>
     </dd>
 
+<dt><b>Description of the prototype protocol:</b></dt>
+<dd><a href="protocol.txt">protocol.txt</a>
+    </dd>
+
 </dl>
 </body>
 </html>
