--- a/resources/index.html
+++ b/resources/index.html
@@ -10,7 +10,7 @@
 <a href="xmlrpc">xmlrpc</a>) and some SAMP web applications.
 The web apps should work using either HTTP (Web profile, nothing new)
 or HTTPS (experimental TLS profile, involves bouncing all SAMP
-communications via the Relay).
+communications via the Relay, see <a href="protocol.txt">protocol details</a>).
 </p>
 <p>The web apps are:</p>
 <ul>
