add sampload documentation
Write a new web page sampload.html, linked from deploy.html
(which turns into index.html on deployment) explaining how
to use sampload, including examples and downloads for the
sampload application.

--- a/deploy.html
+++ b/deploy.html
@@ -47,6 +47,11 @@ or discuss on the
 mailing list.
 </p>
 
+<p><em><strong>Or if all this sounds too complicated</strong> (which it is):
+you can look at <a href="sampload.html">sampload</a>,
+a much dumber solution to part of the same problem.
+</em></p>
+
 <hr />
 <h2>Resources</h2>
 
@@ -148,7 +153,7 @@ but here I just document doing it from within the same servlet.
 <hr />
 <address>
 Mark Taylor --
-<a href='mailto:m.b.taylor@bris.ac.uk'>m.b.taylor@bris.ac.uk</a>
+<a href='mailto:m.b.taylor@bristol.ac.uk'>m.b.taylor@bristol.ac.uk</a>
 <br />
 Git version: @gitversion@
 </address>
