improvements to web site deployment
Make sure required files get installed reliably, fix a URL typo.

--- a/sampload.html
+++ b/sampload.html
@@ -66,8 +66,8 @@ running in the web page could achieve.
     jar file, run using script like
     "<code>java -jar /path/to/sampload.jar $@</code>"
     </li>
-<li><a href="http:/www.star.bristol.ac.uk/~mbt/jsamp/jsamp-1.3.6.jar"
-                                                    >jsamp-1.3.6.jar</a>:
+<li><a href="http://www.star.bristol.ac.uk/~mbt/jsamp/jsamp-1.3.6.jar"
+                                                     >jsamp-1.3.6.jar</a>:
     JSAMP 1.3.6 library jar file, run using script like
     "<code>java -jar jsamp-1.3.6.jar sampload $@</code>"
     </li>
